[package]
name = "sample_entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
glob = "0.3.1"
rayon = "1.7.0"
indicatif = {version="0.17.5", features=["rayon"]}
serde = { version = "1.0.164", features = ["derive"] }
